==> TransistorTun/Smart_Switch/firmware/stm32/Lib/uart_test/uartstdio.c <==
#include "uartstdio.h"
#define UART_TX_BUFFER_SIZE uartstdio_device.TX_buffer_size
#define UART_RX_BUFFER_SIZE uartstdio_device.RX_buffer_size
#define TX_BUFFER_USED          (get_buffer_count(&UART_TX_read_index,  \
                                                &UART_TX_write_index, \
                                                UART_TX_BUFFER_SIZE))
#define TX_BUFFER_FREE          (UART_TX_BUFFER_SIZE - TX_BUFFER_USED)
#define TX_BUFFER_EMPTY         (is_buffer_empty(&UART_TX_read_index,   \
                                               &UART_TX_write_index))
#define TX_BUFFER_FULL          (is_buffer_full(&UART_TX_read_index,  \
                                              &UART_TX_write_index, \
                                              UART_TX_BUFFER_SIZE))
#define ADVANCE_TX_BUFFER_INDEX(Index) \
                                (Index) = ((Index) + 1) % UART_TX_BUFFER_SIZE
#define RX_BUFFER_USED          (get_buffer_count(&UART_RX_read_index,  \
                                                &UART_RX_write_index, \
                                                UART_RX_BUFFER_SIZE))
#define RX_BUFFER_FREE          (UART_RX_BUFFER_SIZE - RX_BUFFER_USED)
#define RX_BUFFER_EMPTY         (is_buffer_empty(&UART_RX_read_index,   \
                                               &UART_RX_write_index))

static void UART_prime_transmit()
{
    HAL_StatusTypeDef UART_ret;
    //
    // Do we have any data to transmit?
    //
    if(!TX_BUFFER_EMPTY)
    //while(!TX_BUFFER_EMPTY)
    {
        //
        // Disable the UART interrupt.  If we don't do this there is a race
        // condition which can cause the read index to be corrupted.
        //
    	//NVIC_DisableIRQ(uartstdio_device.uart_irqn);


        //
        // Yes - take some characters out of the transmit buffer and feed
        // them to the UART transmit FIFO.
        //


        //LL_USART_TransmitData8(uartstdio_device.uart, UART_TX_buffer[UART_TX_read_index]);
        //HAL_UART_Transmit_IT(uartstdio_device.UART_handle, &UART_TX_buffer[UART_TX_read_index], 1);
        //while (!is_finished_sending);
    
        //is_finished_sending = 0;
        //HAL_UART_Transmit_DMA(uartstdio_device.UART_handle, &UART_TX_buffer[UART_TX_read_index], TX_count);
    	UART_ret = HAL_UART_Transmit_IT(uartstdio_device.UART_handle, &UART_TX_buffer[UART_TX_read_index], 1);
        if(UART_ret == HAL_OK)
            ADVANCE_TX_BUFFER_INDEX(UART_TX_read_index);
        //UART_TX_read_index = UART_TX_write_index;
        //ADVANCE_TX_BUFFER_INDEX(UART_TX_read_index);
        //UART_TX_read_index = UART_TX_write_index;


        //
        // Reenable the UART interrupt.
        //
        //NVIC_EnableIRQ(uartstdio_device.uart_irqn);
    }
}

uint16_t UART_write(const char *pcBuf, uint16_t ui16Len)
{

    unsigned int uIdx;

    //
    // Check for valid arguments.
    //
    //
    // Send the characters
    //
    for(uIdx = 0; uIdx < ui16Len; uIdx++)
    {
        //
        // If the character to the UART is \n, then add a \r before it so that
        // \n is translated to \n\r in the output.
        //
        /*
        if(pcBuf[uIdx] == '\n')
        {
            if(!TX_BUFFER_FULL)
            {
                UART_TX_buffer[UART_TX_write_index] = '\r';
                ADVANCE_TX_BUFFER_INDEX(UART_TX_write_index);
            }
            else
            {
                //
                // Buffer is full - discard remaining characters and return.
                //
                break;
            }
        }
        */

        //
        // Send the character to the UART output.
        //
        if(!TX_BUFFER_FULL)
        {
            UART_TX_buffer[UART_TX_write_index] = pcBuf[uIdx];
            ADVANCE_TX_BUFFER_INDEX(UART_TX_write_index);
        }
        else
        {
            //
            // Buffer is full - discard remaining characters and return.
            //
            break;
        }
    }

    //
    // If we have anything in the buffer, make sure that the UART is set
    // up to transmit it.
    //
    /*
    if(!TX_BUFFER_EMPTY)
    {
        //__HAL_UART_ENABLE_IT(uartstdio_device.UART_handle, UART_IT_TC);
        //is_finished_sending = 0;
        if(pcBuf[uIdx - 1] == '\n')
            UART_prime_transmit(uIdx+1);
        else
            UART_prime_transmit(uIdx);
    }
    */
    if(__HAL_UART_GET_IT_SOURCE(uartstdio_device.UART_handle, UART_IT_TC) == 0)
        __HAL_UART_ENABLE_IT(uartstdio_device.UART_handle, UART_IT_TC);
    UART_prime_transmit();

    //
    // Return the number of characters written.
    //
    return(uIdx);
}
